# tsukaima

./: Makefile  README.md  cli.py  config.example.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml  typos.yml
examples_config/: elyza.json  line.json
tsukaima/: model.py  serve.py  streamer.py
tsukaima/schema/: model.py  openai.py  schema.py
