[tool.poetry]
name = "tsukaima"
version = "1.2.0"
description = ""
authors = ["Yuta Hayashibe <yuta@hayashibe.jp>"]
readme = "README.md"
packages = [{include = "tsukaima"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
transformers = ">=4.30.1"
torch = ">=2.1.0"
sentencepiece = "^0.1.99"
accelerate = "^0.23.0"
bitsandbytes = ">=0.39.0"
scipy = "^1.10.1"
pydantic = "^2.5.3"
fastapi = ">=0.100.0b2"
uvicorn = "^0.22.0"
shortuuid = "^1.0.11"
protobuf = "^4.24.2"

[tool.poetry.group.dev.dependencies]
coverage = ">=5.3"
flake8 = ">=3.8.4"
isort = ">=5.9.3"
black = ">=21.10b0"

[tool.poetry.scripts]
tsukaima = "tsukaima.serve:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
