[tool.poetry]
name = "tsukaima"
version = "1.2.0"
description = ""
authors = ["Yuta Hayashibe <yuta@hayashibe.jp>"]
readme = "README.md"
packages = [{include = "tsukaima"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
transformers = ">=4.30.1"
torch = ">=2.1.0"
sentencepiece = "^0.1.99"
accelerate = "^0.23.0"
bitsandbytes = ">=0.39.0"
scipy = "^1.10.1"
pydantic = "^2.0.0"
fastapi = ">=0.100.0b2"
uvicorn = "^0.22.0"
shortuuid = "^1.0.11"
protobuf = "^4.24.2"


[tool.poetry.scripts]
tsukaima = "tsukaima.serve:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
exclude = ["**/third", ".venv", "**/node_modules", "**/__pycache__",]
reportPrivateImportUsage = "information"
reportUnusedVariable="warning"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []
fixable = ["ALL"]
